--- a/week1/practice/index.html
+++ b/week1/practice/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/index.css" />
     <title>1주차 실습</title>
   </head>
   <body>
-    <header>header 영역</header>
-    <main>
+    <header class="header-section">header 영역</header>
+    <main class="main-section">
       main 영역
-      <article>배고프다..</article>
+      <article class="article-section">배고프다..</article>
     </main>
-    <footer>footer 영역</footer>
+    <footer class="footer-section">footer 영역</footer>
   </body>
 </html>
