--- a/week1/practice/index.html
+++ b/week1/practice/index.html
@@ -7,11 +7,18 @@
     <title>1주차 실습</title>
   </head>
   <body>
-    <header class="header-section">header 영역</header>
-    <main class="main-section">
-      main 영역
-      <article class="article-section">배고프다..</article>
-    </main>
-    <footer class="footer-section">footer 영역</footer>
+    <div class="header-section">
+      <nav>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+      </nav>
+    </div>
+    <div class="main-section">
+      <main></main>
+    </div>
+    <div class="footer-section">
+      <footer>footer 영역</footer>
+    </div>
   </body>
 </html>
