add week practice

--- a/week1/assignment/photoAlbum.html
+++ b/week1/assignment/photoAlbum.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>test 서버</title>
-    <link rel="stylesheet" href="../practice/style/test.css" />
+    <title>포토 앨범</title>
+    <link rel="stylesheet" href="./style/photoAlbum.css" />
     <script
       src="https://kit.fontawesome.com/74408c48d6.js"
       crossorigin="anonymous"
