--- a/week1/assignment/first_assignment.html
+++ b/week1/assignment/first_assignment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>test 서버</title>
-    <link rel="stylesheet" href="../practice/style/first_assignment.css" />
+    <link rel="stylesheet" href="./style/first_assignment.css" />
     <script
       src="https://kit.fontawesome.com/74408c48d6.js"
       crossorigin="anonymous"
